--- a/index.html
+++ b/index.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing Page Dicoding</title>
 
     <!-- Link ke CSS -->
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css/app.css" />
     <!-- Link ke google font -->
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+  </head>
 
-<body>
+  <body>
     <!-- header-->
     <header class="navbar-container">
-        <div class="logo">
-            <img src="img/dicoding-header-logo.png" alt="Logo Dicoding">
-        </div>
-        <!-- navigasi-->
-        <nav class="navi-list">
-            <ul>
-                <li a href="#">Beranda</li>
-                <li a href="#">Menu</li>
-                <li a href="#">Apa yang baru</li>
-                <li a href="#">Kontak</li>
-            </ul>
-        </nav>
-        <!-- end navigasi-->
+      <div class="logo">
+        <img src="img/dicoding-header-logo.png" alt="Logo Dicoding" />
+      </div>
+      <!-- navigasi-->
+      <nav class="nav-list">
+        <ul>
+          <li><a href="#">Beranda</a></li>
+          <li><a href="#">Menu</a></li>
+          <li><a href="#">Apa yang baru</a></li>
+          <li><a href="#">Kontak</a></li>
+        </ul>
+      </nav>
+      <!-- end navigasi-->
     </header>
     <!-- end header-->
-</body>
+  </body>
 </html>
